premier jour ok a push demain

--- a/d00/ex00/baba.html
+++ b/d00/ex00/baba.html
@@ -1,6 +1,7 @@
-<HTML>
+<!DOCTYPE html>
+<html>
 	<head>
-		<title>Basics</title>
+		<title>B.A.BA</title>
 		<style type="text/css">
 			body {background-color: pink;}
 			h1 {color: white; text-align: center;}
@@ -29,4 +30,4 @@
 		  <p>© guvillat 2019</p>
 		</div>
 	</body>
-</HTML>
+</html>
